--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
 <div class="middle-box">
   <button type="button" class="drum w" name="button">w</button>
-  <button type="button" class="drum a_button" name="button">a</button>
-  <button type="button" class="drum s_button" name="button">s</button>
-  <button type="button" class="drum d_button" name="button">d</button>
-  <button type="button" class="drum j_button" name="button">j</button>
-  <button type="button" class="drum k_button" name="button">k</button>
-  <button type="button" class="drum l_button" name="button">l</button>
+  <button type="button" class="drum a" name="button">a</button>
+  <button type="button" class="drum s" name="button">s</button>
+  <button type="button" class="drum d" name="button">d</button>
+  <button type="button" class="drum j" name="button">j</button>
+  <button type="button" class="drum k" name="button">k</button>
+  <button type="button" class="drum l" name="button">l</button>
 
 </div>
 
